[gd_scene load_steps=16 format=2]

[ext_resource path="res://levels/CampainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/gameplay/background_1.jpg" type="Texture" id=2]
[ext_resource path="res://assets/GUI/Level_Icons.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/buttons_sheet.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=2]
radius = 45.6785

[sub_resource type="CircleShape2D" id=3]
radius = 46.7259

[sub_resource type="CircleShape2D" id=4]
radius = 46.7259

[sub_resource type="CircleShape2D" id=5]
radius = 46.6778

[sub_resource type="CircleShape2D" id=6]
radius = 46.9978

[sub_resource type="CircleShape2D" id=7]
radius = 47.6771

[sub_resource type="CircleShape2D" id=8]
radius = 46.8384

[sub_resource type="CircleShape2D" id=9]
radius = 46.7954

[sub_resource type="CircleShape2D" id=10]
radius = 46.6778

[sub_resource type="CircleShape2D" id=11]
radius = 46.7954

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43.8967, 39.3843 )

[node name="CampainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 643.355, 358.748 )
scale = Vector2( 0.512, 0.512 )
texture = ExtResource( 2 )

[node name="Level1_Selection" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 643.355, 358.748 )

[node name="Sprite" type="Sprite" parent="Level1_Selection"]
position = Vector2( -200, -50 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 100, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level1_Selection"]
position = Vector2( -200, -50 )
shape = SubResource( 2 )

[node name="Level2_Selection" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 643.355, 358.748 )

[node name="Sprite" type="Sprite" parent="Level2_Selection"]
position = Vector2( -100, -50 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 100, 0, 100, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2_Selection"]
position = Vector2( -100, -50 )
shape = SubResource( 3 )

[node name="Level3_Selection" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 643.355, 358.748 )

[node name="Sprite" type="Sprite" parent="Level3_Selection"]
position = Vector2( 0, -50 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 200, 0, 100, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level3_Selection"]
position = Vector2( 0, -50 )
shape = SubResource( 4 )

[node name="Level4_Selection" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 643.355, 358.748 )

[node name="Sprite" type="Sprite" parent="Level4_Selection"]
position = Vector2( 100, -50 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 300, 0, 100, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level4_Selection"]
position = Vector2( 100, -50 )
shape = SubResource( 5 )

[node name="Level5_Selection" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 643.355, 358.748 )

[node name="Sprite" type="Sprite" parent="Level5_Selection"]
position = Vector2( 200, -50 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 400, 0, 100, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level5_Selection"]
position = Vector2( 200, -50 )
shape = SubResource( 6 )

[node name="Level6_Selection" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 643.355, 358.748 )

[node name="Sprite" type="Sprite" parent="Level6_Selection"]
position = Vector2( -200, 50 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 100, 100, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level6_Selection"]
position = Vector2( -200, 50 )
shape = SubResource( 7 )

[node name="Level7_Selection" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 643.355, 358.748 )

[node name="Sprite" type="Sprite" parent="Level7_Selection"]
position = Vector2( -100, 50 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 100, 100, 100, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level7_Selection"]
position = Vector2( -100, 50 )
shape = SubResource( 8 )

[node name="Level8_Selection" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 643.355, 358.748 )

[node name="Sprite" type="Sprite" parent="Level8_Selection"]
position = Vector2( 0, 50 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 200, 100, 100, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level8_Selection"]
position = Vector2( 0, 50 )
shape = SubResource( 9 )

[node name="Level9_Selection" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 643.355, 358.748 )

[node name="Sprite" type="Sprite" parent="Level9_Selection"]
position = Vector2( 100, 50 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 300, 100, 100, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level9_Selection"]
position = Vector2( 100, 50 )
shape = SubResource( 10 )

[node name="Level10_Selection" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 643.355, 358.748 )

[node name="Sprite" type="Sprite" parent="Level10_Selection"]
position = Vector2( 200, 50 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 400, 100, 100, 100 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level10_Selection"]
position = Vector2( 200, 50 )
shape = SubResource( 11 )

[node name="Back" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 1224.58, 664.392 )
scale = Vector2( 1.02861, 1.02861 )

[node name="Sprite" type="Sprite" parent="Back"]
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 786, 443, 96, 96 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back"]
position = Vector2( -0.384521, -0.384704 )
shape = SubResource( 1 )
[connection signal="input_event" from="Level1_Selection" to="." method="_on_Level1_Selection_input_event"]
[connection signal="input_event" from="Level2_Selection" to="." method="_on_Level2_Selection_input_event"]
[connection signal="input_event" from="Level3_Selection" to="." method="_on_Level3_Selection_input_event"]
[connection signal="input_event" from="Level4_Selection" to="." method="_on_Level4_Selection_input_event"]
[connection signal="input_event" from="Level5_Selection" to="." method="_on_Level5_Selection_input_event"]
[connection signal="input_event" from="Level6_Selection" to="." method="_on_Level6_Selection_input_event"]
[connection signal="input_event" from="Level7_Selection" to="." method="_on_Level7_Selection_input_event"]
[connection signal="input_event" from="Level8_Selection" to="." method="_on_Level8_Selection_input_event"]
[connection signal="input_event" from="Level9_Selection" to="." method="_on_Level9_Selection_input_event"]
[connection signal="input_event" from="Level10_Selection" to="." method="_on_Level10_Selection_input_event"]
[connection signal="input_event" from="Back" to="." method="_on_Back_input_event"]
